# DroneDemo

./: .claude  .clinerules  .gitignore  .gitmodules  CMakeLists.txt  PROJECT-SPEC.md  README.md  docs
src/: main.cpp
src/core/: detection_client.h  opengl.h  osd.h  platform.h  video_pipeline.h  window.h
src/detection/: detection_client.cpp  detection_client.h
src/osd/: osd_renderer.cpp  osd_renderer.h
src/platform/: platform_linux.cpp  platform_macos.cpp
src/rendering/: glfw_window.cpp  glfw_window.h  texture_renderer.cpp  texture_renderer.h
src/video/: gstreamer_pipeline.cpp  gstreamer_pipeline.h
